# MSOutlook-MCP

./: .env.example  .gitignore  CLAUDE.md  README.md  claude_desktop_config_example.json  outlook_mcp_auth.py  outlook_mcp_server.py  pyproject.toml  requirements.txt
docs/: QUICKSTART.md  SETUP_PERSONAL_ACCOUNTS.md
outlook_mcp/: __init__.py  auth.py  helpers.py  models.py  server.py
scripts/: generate-claude-config.ps1  generate-claude-config.sh  setup-env.ps1  setup-env.sh
tests/: test_mcp_server.py
