[project]
name = "outlook-mcp"
version = "1.0.0"
description = "MCP server connecting Claude to Microsoft Outlook via Microsoft Graph API"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "msal>=1.28.0",
    "pydantic>=2.0.0",
]

[project.scripts]
outlook-mcp = "outlook_mcp.server:main"
